# mesaEconomics

./: README.md  main.py  pyproject.toml
applications/adoptionModel/: __init__.py  adopters.py  main.py  model.py  technologies.py
mesaEconomics/: agents.py  commodities.py  economies.py
notebooks/: adoptionModel.ipynb
tests/: test_agents.py  test_commodities.py
