[tool.poetry]
name = "mesaeconomics"
version = "0.1.0"
description = "Agent-based framework for economic modelling"
authors = ["Jan <abrell@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
jupyter = "^1.0.0"
notebook = "^7.0.4"
mesa = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
